Desarrollo Responsive Diseng and progrmacion del boton share a my card V1

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&display=swap" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Desafio-02</title>
+    <link rel="shortcut icon" href="/IMG/favicon-32x32.png" type="image/x-icon">
+    <title>Article Preview Component Master</title>
 </head>
 <body>
     <section class="article">
         <div class="container">
             <div class="article__conte">
                 <div class="article__izq">
-                    <img src="/IMG/drawers.jpg" alt="" class="article__img">
+                    <img src="IMG/drawers.jpg" alt="" class="article__img">
                 </div>
 
                 <div class="article__derch">
@@ -25,7 +26,7 @@
 
                     <div class="article__user">
                         <div class="arcticle__user-conte">
-                            <img class="article__user-img" src="/IMG/avatar-michelle.jpg" alt="">
+                            <img class="article__user-img" src="IMG/avatar-michelle.jpg" alt="">
 
                             <div class="article__user-info">
                                 <h2 class="article__user-name">Michelle Appleton</h2>
@@ -40,6 +41,7 @@
                                 <i class='bx bxl-facebook-circle'></i>
                                 <i class='bx bxl-twitter' ></i>
                                 <i class='bx bxl-pinterest'></i>
+                                <!-- <i class='bx bxs-share bx-flip-horizontal article__icon-share'></i> -->
                             </div>
                             <i class='bx bxs-down-arrow share__arrow'></i>
                     </div>
