Nuevos ajustes y agregado de los detalles de autor

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             </div>
         </div>
     </section>
+
+    <footer class="pie">
+        <div class="container">
+            <p class="pie__text">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor</a>.
+            Coded by <a href="https://github.com/waynerafael15" target="_blank">waynerafael15</a>.</p>
+        </div>
+    </footer>
+
     <script src="app.js"></script>
 </body>
 </html>
